[backend] Allow requests to swagger-ui pass unrestricted
Signed-off-by: Hakan Tandogan <hakan@tandogan.com>